tests/snapshots/observability_diagnostics_deadline_exceeded.snap
---
source: src/observability/diagnostics.rs
expression: rendered
---
scenario: deadline_exceeded
generated_at: <scrubbed>

[region]
[ASUP-E301] region close drain still blocked for RegionId(0:0).
  doc: docs/error_codes/ASUP-E301.md
  state: Open
  - task TaskId(0:0) still running (state=Finalizing, polls=0, wait_edges=[], last_checkpoint="<none>")
  - obligation ObligationId(0:0) held by task TaskId(0:0) (type=Lease, holder_waiters=[], holder_last_checkpoint="<none>")
  -> Wait for live tasks to complete, or cancel the region.
  -> Ensure obligations are committed/aborted before closing.

[task]
Task TaskId(0:0) blocked: finalizing (deadline (deadline exceeded), polls_remaining=42)
  - deadline_at: <scrubbed>
  - cancel kind: deadline
  - cleanup polls remaining: 42
  -> Inspect cleanup latency and tighten downstream budgets.

[leaks]
- ObligationId(0:0) region=RegionId(0:0) holder=Some(TaskId(0:0)) type=Lease age_ms=1250
