tests/snapshots/observability_diagnostics_happy_path.snap
---
source: src/observability/diagnostics.rs
expression: rendered
---
scenario: happy_path
generated_at: <scrubbed>

[region]
none

[task]
Task TaskId(0:0) blocked: completed
  - outcome: Ok(())

[leaks]
none
