tests/snapshots/observability_diagnostics_structured_report_v2.snap
---
source: src/observability/diagnostics.rs
expression: rendered
---
report_version: v2

[happy]
scenario: happy_path
generated_at: <scrubbed>

[region]
none

[task]
Task TaskId(0:0) blocked: completed
  - outcome: Ok(())

[leaks]
none

[degraded]
scenario: shutdown_drain
generated_at: <scrubbed>

[region]
[ASUP-E301] region close drain still blocked for RegionId(0:0).
  doc: docs/error_codes/ASUP-E301.md
  state: Open
  - child region RegionId(1:0) still open (Open)
  - task TaskId(0:0) still running (state=Running, polls=9, wait_edges=[], last_checkpoint="<none>")
  - obligation ObligationId(0:0) held by task TaskId(0:0) (type=Ack, holder_waiters=[], holder_last_checkpoint="<none>")
  -> Wait for child regions to close, or cancel them.
  -> Wait for live tasks to complete, or cancel the region.
  -> Ensure obligations are committed/aborted before closing.

[task]
Task TaskId(1:0) blocked: cancel requested (shutdown (node draining))
  - observed_at: <scrubbed>
  - cancel kind: shutdown
  - message: node draining
  -> Task is cancelling; wait for drain/finalizers.
  -> Continue draining child region tasks before sealing shutdown.

[leaks]
- ObligationId(0:0) region=RegionId(0:0) holder=Some(TaskId(0:0)) type=Ack age_ms=4500
- ObligationId(1:0) region=RegionId(1:0) holder=Some(TaskId(1:0)) type=Lease age_ms=4250
