tests/snapshots/observability_diagnostics_structured_report_v3.snap
---
source: src/observability/diagnostics.rs
expression: rendered
---
report_version: v3

[summary]
scenario_count: 3
passing_count: 1
degraded_count: 1
critical_count: 1


[happy]
status: passing
resource_accounting:
  - regions_total: 1
  - regions_open: 1
  - tasks_total: 1
  - tasks_live: 0
  - obligations_total: 0
  - obligations_leaked: 0
report:
  scenario: happy_path
  generated_at: <scrubbed>
  
  [region]
  none
  
  [task]
  Task TaskId(0:0) blocked: completed
    - outcome: Ok(())
  
  [leaks]
  none


[degraded]
status: degraded
resource_accounting:
  - regions_total: 2
  - regions_open: 2
  - tasks_total: 2
  - tasks_live: 2
  - obligations_total: 2
  - obligations_leaked: 2
report:
  scenario: shutdown_drain
  generated_at: <scrubbed>
  
  [region]
  [ASUP-E301] region close drain still blocked for RegionId(0:0).
    doc: docs/error_codes/ASUP-E301.md
    state: Open
    - child region RegionId(1:0) still open (Open)
    - task TaskId(0:0) still running (state=Running, polls=9, wait_edges=[], last_checkpoint="<none>")
    - obligation ObligationId(0:0) held by task TaskId(0:0) (type=Ack, holder_waiters=[], holder_last_checkpoint="<none>")
    -> Wait for child regions to close, or cancel them.
    -> Wait for live tasks to complete, or cancel the region.
    -> Ensure obligations are committed/aborted before closing.
  
  [task]
  Task TaskId(1:0) blocked: cancel requested (shutdown (node draining))
    - observed_at: <scrubbed>
    - cancel kind: shutdown
    - message: node draining
    -> Task is cancelling; wait for drain/finalizers.
    -> Continue draining child region tasks before sealing shutdown.
  
  [leaks]
  - ObligationId(0:0) region=RegionId(0:0) holder=Some(TaskId(0:0)) type=Ack age_ms=4500
  - ObligationId(1:0) region=RegionId(1:0) holder=Some(TaskId(1:0)) type=Lease age_ms=4250


[critical]
status: critical
resource_accounting:
  - regions_total: 1
  - regions_open: 1
  - tasks_total: 2
  - tasks_live: 2
  - obligations_total: 1
  - obligations_leaked: 1
report:
  scenario: critical_deadlock
  generated_at: <scrubbed>
  
  [region]
  [ASUP-E301] region close drain still blocked for RegionId(0:0).
    doc: docs/error_codes/ASUP-E301.md
    state: Open
    - task TaskId(0:0) still running (state=Running, polls=0, wait_edges=[TaskId(1:0)], last_checkpoint="<none>")
    - task TaskId(1:0) still running (state=Running, polls=0, wait_edges=[], last_checkpoint="<none>")
    - obligation ObligationId(0:0) held by task TaskId(0:0) (type=Ack, holder_waiters=[TaskId(1:0)], holder_last_checkpoint="<none>")
    -> Wait for live tasks to complete, or cancel the region.
    -> Ensure obligations are committed/aborted before closing.
    -> Directional deadlock risk Critical (score 1.000); inspect cycles and break wait-for loops.
  
  [task]
  Task TaskId(0:0) blocked: awaiting future (unknown await point)
    - observed_at: <scrubbed>
    - waiters: 1
    -> Task appears to be awaiting an async operation.
    -> Break the trapped wait cycle before allowing retries.
  
  [leaks]
  - ObligationId(0:0) region=RegionId(0:0) holder=Some(TaskId(0:0)) type=Ack age_ms=1250
